--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primary">@color/white</color>
-    <color name="primary_dark">@color/grey</color>
+    <color name="primary_dark">@color/grey_100</color>
     <color name="accent">@color/blue</color>
 
     <color name="white">#ffffff</color>
@@ -11,5 +11,6 @@
 
     <color name="blue">#36A1FC</color>
 
-    <color name="grey">#cccccc</color>
+    <color name="grey_50">#EBEEF2</color>
+    <color name="grey_100">#cccccc</color>
 </resources>
