Add the "Forums" tab to the "Main" flow

--- a/app/src/main/res/layout/fragment_forums.xml
+++ b/app/src/main/res/layout/fragment_forums.xml
@@ -5,6 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        android:id="@+id/forumsToolbar"
+        layout="@layout/toolbar" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/forumsRecyclerView"
         android:layout_width="0dp"
@@ -12,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/forumsToolbar"
         tools:itemCount="2"
         tools:listitem="@layout/item_forum" />
 
