--- a/app/src/main/res/menu/main_flow_bottom_nav.xml
+++ b/app/src/main/res/menu/main_flow_bottom_nav.xml
@@ -6,10 +6,9 @@
         android:icon="@drawable/ic_account_circle"
         android:title="@string/main_flow_profile" />
 
-    <!-- TODO -->
     <item
-        android:id="@+id/menu_bottom_nav_threads"
-        android:icon="@drawable/ic_comment"
-        android:title="Threads" />
+        android:id="@+id/menu_bottom_nav_forums"
+        android:icon="@drawable/ic_forum"
+        android:title="@string/main_flow_forums" />
 
 </menu>
