--- a/app/src/main/res/layout/fragment_channel_details.xml
+++ b/app/src/main/res/layout/fragment_channel_details.xml
@@ -45,7 +45,7 @@
                         android:layout_height="match_parent"
                         android:padding="@dimen/normal_margin">
 
-                        <de.hdodenhof.circleimageview.CircleImageView
+                        <ImageView
                             android:id="@+id/faviconImageView"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
