--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/normal_margin">
 
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:id="@+id/avatarImageView"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
