--- a/app/src/main/res/layout/item_profile_activity.xml
+++ b/app/src/main/res/layout/item_profile_activity.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:padding="@dimen/normal_margin">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/authorImageView"
         android:layout_width="48dp"
         android:layout_height="48dp"
