--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:padding="@dimen/normal_margin">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/avatarImageView"
         android:layout_width="32dp"
         android:layout_height="32dp"
