Rename the color "secondary" to "accent"

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,11 @@
     <!-- Colors to apply in views -->
     <color name="primary">@color/white</color>
     <color name="primary_dark">@color/grey_silver</color>
-    <color name="secondary">@color/blue_dodger</color>
+    <color name="accent">@color/blue_dodger</color>
 
     <color name="toolbar_text">@color/blue_dodger</color>
 
+    <!-- TODO Следует переименовать в соответствии с новым подходом именования цветов -->
     <color name="blue_light">#A3D3FD</color>
     <color name="grey_50">#EBEEF2</color>
 
