Minor refactoring of styles and colors

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="ToolbarStyle" parent="Widget.MaterialComponents.Toolbar">
+    <style name="AppToolbar" parent="Widget.MaterialComponents.Toolbar">
         <item name="titleTextColor">@color/toolbar_text</item>
     </style>
 
