--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="accent">@color/blue_dodger</color>
 
     <color name="toolbar_text">@color/blue_dodger</color>
+    <color name="progress_content_background">@color/black_transparent_50</color>
 
     <!-- TODO Следует переименовать в соответствии с новым подходом именования цветов -->
     <color name="blue_light">#A3D3FD</color>
