--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorSecondary">@color/accent</item>
 
-        <item name="toolbarStyle">@style/ToolbarStyle</item>
+        <item name="toolbarStyle">@style/AppToolbar</item>
     </style>
 
 </resources>
