--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,9 +4,16 @@
         <item name="titleTextColor">@color/toolbar_text</item>
     </style>
 
-    <style name="BottomNavBarStyle" parent="Widget.MaterialComponents.BottomNavigationView">
+    <style name="AppBottomNavView" parent="Widget.MaterialComponents.BottomNavigationView">
         <item name="itemIconTint">@drawable/bottom_nav_selector</item>
         <item name="itemTextColor">@drawable/bottom_nav_selector</item>
+    </style>
+
+    <style name="Text" />
+
+    <style name="Text.Date">
+        <item name="android:textColor">@color/text_date</item>
+        <item name="android:textSize">@dimen/font_small</item>
     </style>
 
 </resources>
