Minor refactoring the "Auth" screen and rename several layout files

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -103,8 +103,8 @@
 
     </ScrollView>
 
-    <include layout="@layout/content_progress" />
+    <include layout="@layout/layout_progress" />
 
-    <include layout="@layout/content_error" />
+    <include layout="@layout/layout_error" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
