--- a/app/src/main/res/layout/fragment_profile_activity.xml
+++ b/app/src/main/res/layout/fragment_profile_activity.xml
@@ -28,8 +28,8 @@
         tools:itemCount="3"
         tools:listitem="@layout/item_profile_activity" />
 
-    <include layout="@layout/content_progress" />
+    <include layout="@layout/layout_progress" />
 
-    <include layout="@layout/content_error" />
+    <include layout="@layout/layout_error" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
