--- a/app/src/main/res/layout/item_user_activity.xml
+++ b/app/src/main/res/layout/item_user_activity.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/authorImageView"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/avatar_size"
+        android:layout_height="@dimen/avatar_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
@@ -25,7 +25,7 @@
         tools:text="@tools:sample/full_names" />
 
     <ImageView
-        android:id="@+id/activityTypeImageView"
+        android:id="@+id/activityImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/activityTextView"
@@ -38,8 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_normal"
-        app:layout_constraintStart_toEndOf="@id/activityTypeImageView"
-        app:layout_constraintTop_toTopOf="@id/activityTypeImageView"
+        app:layout_constraintStart_toEndOf="@id/activityImageView"
+        app:layout_constraintTop_toTopOf="@id/activityImageView"
         tools:text="@tools:sample/date/mmddyy" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
