--- a/app/src/main/res/layout/item_user_activity.xml
+++ b/app/src/main/res/layout/item_user_activity.xml
@@ -16,6 +16,7 @@
 
     <TextView
         android:id="@+id/activityTextView"
+        style="@style/Text.Primary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_normal"
@@ -26,8 +27,9 @@
 
     <ImageView
         android:id="@+id/activityImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="@dimen/spacing_small"
         app:layout_constraintStart_toStartOf="@id/activityTextView"
         app:layout_constraintTop_toBottomOf="@id/activityTextView"
         tools:src="@drawable/ic_favorite" />
@@ -37,7 +39,7 @@
         style="@style/Text.Date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/spacing_normal"
+        android:layout_marginStart="@dimen/spacing_small"
         app:layout_constraintStart_toEndOf="@id/activityImageView"
         app:layout_constraintTop_toTopOf="@id/activityImageView"
         tools:text="@tools:sample/date/mmddyy" />
