--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,12 @@
     <color name="primary_dark">@color/grey_silver</color>
     <color name="accent">@color/blue_dodger</color>
 
+    <color name="text_primary">@color/black</color>
     <color name="text_date">@color/grey_dove</color>
 
     <color name="toolbar_text">@color/blue_dodger</color>
+
+    <color name="button_upvote">@color/red_froly</color>
 
     <color name="bottom_nav_active">@color/blue_dodger</color>
     <color name="bottom_nav_inactive">@color/grey_silver</color>
@@ -24,6 +27,9 @@
 
     <!-- Palette blue -->
     <color name="blue_dodger">#2E9FFF</color>
+
+    <!-- Palette red -->
+    <color name="red_froly">#F05F70</color>
 
     <!-- Palette grey -->
     <color name="grey_silver">#cccccc</color>
