--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,10 @@
 
     <style name="Text" />
 
+    <style name="Text.Primary">
+        <item name="android:textColor">@color/text_primary</item>
+    </style>
+
     <style name="Text.Date">
         <item name="android:textColor">@color/text_date</item>
         <item name="android:textSize">@dimen/font_small</item>
