--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="accent">@color/blue_dodger</color>
 
     <color name="text_primary">@color/black</color>
+    <color name="text_secondary">@color/grey_dove</color>
     <color name="text_date">@color/grey_dove</color>
 
     <color name="toolbar_text">@color/blue_dodger</color>
