--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
 
     <dimen name="spacing_normal">16dp</dimen>
     <dimen name="spacing_small">8dp</dimen>
+    <dimen name="spacing_micro">4dp</dimen>
 
     <dimen name="avatar_size">40dp</dimen>
 
