--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,13 @@
     <style name="Text" />
 
     <style name="Text.Primary">
+        <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textColor">@color/text_primary</item>
+        <item name="android:textSize">@dimen/font_normal</item>
+    </style>
+
+    <style name="Text.Secondary">
+        <item name="android:textColor">@color/text_secondary</item>
     </style>
 
     <style name="Text.Date">
