Add screen "Trend" (threads). Fix and improve UI

--- a/app/src/main/res/layout/fragment_user_activity.xml
+++ b/app/src/main/res/layout/fragment_user_activity.xml
@@ -7,7 +7,6 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
-        style="@style/AppToolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:title="@string/user_activity_title" />
@@ -35,6 +34,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:clipToPadding="false"
+                    android:paddingTop="@dimen/spacing_list_vertical"
+                    android:paddingBottom="@dimen/spacing_list_vertical"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:itemCount="5"
                     tools:listitem="@layout/item_user_activity" />
