--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,8 @@
     <dimen name="spacing_small">8dp</dimen>
     <dimen name="spacing_micro">4dp</dimen>
 
+    <dimen name="spacing_list_vertical">10dp</dimen>
+
     <dimen name="avatar_size">40dp</dimen>
 
     <!-- TODO Следует заменить в соответствии с новым применяемым гайдом -->
