--- a/app/src/main/res/layout/item_thread.xml
+++ b/app/src/main/res/layout/item_thread.xml
@@ -114,32 +114,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/contentLayout">
 
-            <!-- TODO Доработать стили кнопок ниже -->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/voteButton"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                style="@style/ThreadButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/text_primary"
                 app:icon="@drawable/ic_favorite"
-                app:iconTint="@color/accent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:strokeColor="@color/accent"
                 tools:text="122" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/commentsButton"
-                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+                style="@style/ThreadButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/spacing_normal"
-                android:textColor="@color/text_primary"
                 app:icon="@drawable/ic_comment"
-                app:iconTint="@color/accent"
                 app:layout_constraintStart_toEndOf="@+id/voteButton"
                 app:layout_constraintTop_toTopOf="parent"
-                app:strokeColor="@color/accent"
                 tools:text="122" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
