--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,12 +13,17 @@
     <color name="text_date">@color/gray_dove</color>
 
     <color name="toolbar_background">@color/primary</color>
-    <color name="toolbar_text">@color/blue_dodger</color>
+    <color name="toolbar_text">@color/accent</color>
 
-    <color name="button_upvote">@color/red_froly</color>
-
-    <color name="bottom_nav_active">@color/blue_dodger</color>
+    <color name="bottom_nav_active">@color/accent</color>
     <color name="bottom_nav_inactive">@color/gray_silver</color>
+
+    <color name="button_upvote_background">@color/red_froly</color>
+    <color name="button_thread_upvote_icon">@color/white</color>
+    <color name="button_thread_upvote_text">@color/white</color>
+    <color name="button_thread_background">@color/transparent</color>
+    <color name="button_thread_icon">@color/accent</color>
+    <color name="button_thread_text">@color/text_primary</color>
 
     <color name="divider">@color/gray_athens</color>
 
@@ -31,6 +36,7 @@
     <!-- General palettes -->
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="transparent">#00000000</color>
 
     <!-- Palette blue -->
     <color name="blue_dodger">#2E9FFF</color>
