Add user's activity pagination

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -103,8 +103,8 @@
 
     </ScrollView>
 
-    <include layout="@layout/layout_progress" />
+    <include layout="@layout/layout_empty_progress" />
 
-    <include layout="@layout/layout_error" />
+    <include layout="@layout/layout_empty_error" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
