--- a/app/src/main/res/layout/fragment_threads.xml
+++ b/app/src/main/res/layout/fragment_threads.xml
@@ -29,8 +29,8 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    <include layout="@layout/layout_progress" />
+    <include layout="@layout/layout_empty_progress" />
 
-    <include layout="@layout/layout_error" />
+    <include layout="@layout/layout_empty_error" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
