--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -23,7 +23,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <include layout="@layout/layout_progress" />
+        <include layout="@layout/layout_empty_progress" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
