--- a/app/src/main/res/layout/fragment_forums.xml
+++ b/app/src/main/res/layout/fragment_forums.xml
@@ -20,8 +20,8 @@
         tools:itemCount="2"
         tools:listitem="@layout/item_forum" />
 
-    <include layout="@layout/layout_progress" />
+    <include layout="@layout/layout_empty_progress" />
 
-    <include layout="@layout/layout_error" />
+    <include layout="@layout/layout_empty_error" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
