--- a/app/src/main/res/layout/fragment_profile_posts.xml
+++ b/app/src/main/res/layout/fragment_profile_posts.xml
@@ -19,8 +19,8 @@
         tools:itemCount="2"
         tools:listitem="@layout/item_profile_post" />
 
-    <include layout="@layout/layout_progress" />
+    <include layout="@layout/layout_empty_progress" />
 
-    <include layout="@layout/layout_error" />
+    <include layout="@layout/layout_empty_error" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
