--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -16,8 +16,8 @@
         tools:itemCount="2"
         tools:listitem="@layout/item_user" />
 
-    <include layout="@layout/layout_progress" />
+    <include layout="@layout/layout_empty_progress" />
 
-    <include layout="@layout/layout_error" />
+    <include layout="@layout/layout_empty_error" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
