--- a/app/src/main/res/layout/item_user_activity.xml
+++ b/app/src/main/res/layout/item_user_activity.xml
@@ -32,12 +32,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_micro"
-        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@id/activityTextView"
         app:layout_constraintTop_toBottomOf="@+id/activityTextView"
-        tools:text="@tools:sample/lorem"
-        tools:visibility="visible" />
+        tools:text="@tools:sample/lorem" />
 
     <ImageView
         android:id="@+id/activityTypeImageView"
