--- a/app/src/main/res/layout/item_progress.xml
+++ b/app/src/main/res/layout/item_progress.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/spacing_normal">
+    android:padding="@dimen/spacing_small">
 
     <ProgressBar
         android:layout_width="wrap_content"
