Add refresh user's activity by click on "Refresh" button

--- a/app/src/main/res/layout/layout_empty_data.xml
+++ b/app/src/main/res/layout/layout_empty_data.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/emptyDataLayout"
+    android:id="@+id/dataLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -16,7 +16,7 @@
         android:text="@string/msg_empty_data" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/refreshButton"
+        android:id="@+id/dataRefreshButton"
         style="@style/RefreshButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
