--- a/app/src/main/res/layout/layout_empty_error.xml
+++ b/app/src/main/res/layout/layout_empty_error.xml
@@ -18,7 +18,7 @@
         tools:text="@string/error_unknown" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/refreshButton"
+        android:id="@+id/errorRefreshButton"
         style="@style/RefreshButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
