--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,7 @@
 
     <style name="AppToolbar" parent="Widget.MaterialComponents.Toolbar">
         <item name="android:background">@color/toolbar_background</item>
+        <item name="android:elevation">4dp</item>
         <item name="titleTextColor">@color/toolbar_text</item>
     </style>
 
