--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,9 @@
 <resources>
 
     <style name="AppToolbar" parent="Widget.MaterialComponents.Toolbar">
-        <item name="android:background">@color/toolbar_background</item>
+        <item name="android:background">?colorPrimary</item>
         <item name="android:elevation">4dp</item>
-        <item name="titleTextColor">@color/toolbar_text</item>
+        <item name="titleTextColor">?colorSecondary</item>
     </style>
 
     <style name="AppCardView" parent="Widget.MaterialComponents.CardView">
