Add "Forum" screen flow: container with tabs "Details", "Latest" and "Hot". Remove old "Channel" screens.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
 
     <dimen name="spacing_list_vertical">10dp</dimen>
 
+    <dimen name="toolbar_expand_height">192dp</dimen>
     <dimen name="avatar_size">40dp</dimen>
 
     <!-- TODO Следует заменить в соответствии с новым применяемым гайдом -->
