--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="titleTextColor">?colorSecondary</item>
     </style>
 
+    <style name="AppTabLayout" parent="Widget.MaterialComponents.TabLayout">
+        <item name="tabIndicatorColor">?colorSecondary</item>
+        <item name="tabSelectedTextColor">?colorSecondary</item>
+    </style>
+
     <style name="AppCardView" parent="Widget.MaterialComponents.CardView">
         <item name="cardCornerRadius">0dp</item>
     </style>
