Refactor "Popular" threads

--- a/app/src/main/res/layout/fragment_forum_container.xml
+++ b/app/src/main/res/layout/fragment_forum_container.xml
@@ -39,7 +39,7 @@
             style="@style/AppTabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="fixed" />
+            app:tabMode="scrollable" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
