--- a/app/src/main/res/layout/fragment_forum_details_container.xml
+++ b/app/src/main/res/layout/fragment_forum_details_container.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/detailsViewPager"
+        android:id="@+id/detailsPager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
