--- a/app/src/main/res/layout/fragment_my_forums.xml
+++ b/app/src/main/res/layout/fragment_my_forums.xml
@@ -8,7 +8,7 @@
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="@string/forums_title" />
+        app:title="@string/my_forums_title" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
