--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,9 @@
     <color name="button_thread_icon">@color/accent</color>
     <color name="button_thread_text">@color/text_primary</color>
 
+    <color name="button_follow">@color/blue_dodger</color>
+    <color name="button_following">@color/green_fern</color>
+
     <color name="divider">@color/gray_athens</color>
 
     <!-- TODO Следует переименовать в соответствии с новым подходом именования цветов -->
@@ -45,4 +48,7 @@
     <color name="gray_silver">#cccccc</color>
     <color name="gray_athens">#EBEEF3</color>
     <color name="gray_dove">#6F6F6F</color>
+
+    <!-- Palette green -->
+    <color name="green_fern">#5FB66A</color>
 </resources>
