--- a/app/src/main/res/layout/fragment_forum_threads.xml
+++ b/app/src/main/res/layout/fragment_forum_threads.xml
@@ -33,4 +33,6 @@
 
     <include layout="@layout/layout_empty_error" />
 
+    <include layout="@layout/layout_empty_data" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
