Minor refactor color resources and style of Bottom Navigation View

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="colorSecondary">@color/accent</item>
 
         <item name="android:colorBackground">@color/screen_background</item>
+        <item name="colorSurface">@color/content_background</item>
 
         <item name="colorOnPrimary">@color/text_primary</item>
         <item name="colorOnSurface">@color/text_primary</item>
