--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,14 +6,14 @@
     <color name="accent">@color/blue_dodger</color>
 
     <color name="screen_background">@color/gray_athens</color>
-    <color name="list_item_background">@color/white</color>
+    <color name="content_background">@color/white</color>
 
     <color name="text_primary">@color/black</color>
     <color name="text_secondary">@color/gray_dove</color>
     <color name="text_date">@color/gray_dove</color>
 
-    <color name="bottom_nav_active">@color/accent</color>
-    <color name="bottom_nav_inactive">@color/gray_silver</color>
+    <color name="bottom_nav_item_active">@color/accent</color>
+    <color name="bottom_nav_item_inactive">@color/gray_silver</color>
 
     <color name="button_upvote_background">@color/red_froly</color>
     <color name="button_thread_upvote_icon">@color/white</color>
