--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="font_normal">16sp</dimen>
+    <dimen name="font_secondary">14sp</dimen>
     <dimen name="font_small">12sp</dimen>
 
     <dimen name="spacing_large">24dp</dimen>
